--- a/Learnign to predict.ipynb
+++ b/Learnign to predict.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>__Supervised learning__</h1> \n",
+    "<h1>Supervised learning</h1> \n",
     "\n",
     "treats each sequence $x_1,...,x_m,z$ as a sequence of observation-outcome pairs $(x_1,z),(x_2,z),...,(x_m,z)$. The increment $\\Delta w_t$ will depend on the error between $P_t$ and $z$; in particular:\n",
     "\n",
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>__TD(1)__</h1>\n",
+    "<h1>TD(1)</h1>\n",
     "\n",
     "produces exactly the same result as (2), but can be computed incrementally. In fact we can consider the error $$z - P_t$$ as the sum of changes in predictions during steps following $t$, that is:\n",
     "\n",
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>__TD($\\lambda$)__</h1>\n",
+    "<h1>TD($\\lambda$)</h1>\n",
     "\n",
     "generalizes (3), making greater alterations to more recent predictions. In particular, alterations of past predictions are weighted exponentially. An important thing to notice is that this weighting form can be computed incrementally, in fact:\n",
     "\n",
@@ -573,21 +573,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
